# protobuf-rust-tutorial

./: Cargo.toml
src/: build.rs  main.rs  user.c.pb.rs  user.pb.thunks.cc  user.rs
src/proto/: user.proto
