[package]
name = "protobuf-rust-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
prost-types = "0.10"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = "0.10"