[package]
name = "protobuf-rust-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.4"
prost-types = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
prost-build = "0.12.4"

[build-dependencies]
prost-build = "0.12.4"